--- a/gateway/bc-workroom-gateway.service
+++ b/gateway/bc-workroom-gateway.service
@@ -6,8 +6,8 @@ Requires=mosquitto.service
 [Service]
 ExecStart=/usr/bin/bc-workroom-gateway -d /dev/stm32-ACM0
 User=bigclown
-Restart=always
-RestartSec=5
+Restart=on-failure
+RestartSec=10s
 
 [Install]
 WantedBy=multi-user.target
