--- a/ledstrip/bc-workroom-ledstrip.service
+++ b/ledstrip/bc-workroom-ledstrip.service
@@ -6,8 +6,8 @@ Requires=mosquitto.service bc-workroom-gateway.service
 [Service]
 ExecStart=/usr/bin/bc-workroom-ledstrip
 User=bigclown
-Restart=always
-RestartSec=5
+Restart=on-failure
+RestartSec=10s
 
 [Install]
 WantedBy=multi-user.target
