--- a/gateway/bc-workroom-gateway.service
+++ b/gateway/bc-workroom-gateway.service
@@ -1,13 +1,15 @@
 [Unit]
 Description=BigClown gateway between Base unit connected via USB and MQTT broker
-After=network.target
-Requires=mosquitto.service stm32-ACM0.device
+After=network.target mosquitto.service dev-stm32ACM0.device
+BindsTo=dev-stm32ACM0.device
+Requires=mosquitto.service
+Requisite=dev-stm32ACM0.device
 
 [Service]
-ExecStart=/usr/bin/bc-workroom-gateway -d /dev/stm32-ACM0
+ExecStart=/usr/bin/bc-workroom-gateway -d /dev/stm32ACM0
 User=bigclown
 Restart=on-failure
 RestartSec=10s
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=dev-stm32ACM0.device
