--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - gem install --no-ri --no-rdoc fpm
   - pip3 install --upgrade pip
 script:
+  - ./script/test
   - ./script/build-deb
 deploy:
   provider: script
